--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dependencies": {
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "bootstrap": "^5.3.7",
         "lucide-react": "^0.511.0",
         "react": "^18.3.1",
-        "react-bootstrap": "^2.10.5",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
         "wallpaper": "^7.2.1"
