--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "bootstrap": "^5.3.7",
         "lucide-react": "^0.511.0",
+        "path-browserify": "^1.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
