--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
     "name": "symphony",
     "private": true,
     "version": "0.0.0",
+    "build": {
+      "appId": "com.ajayarsymphony.app",
+      "win": {
+        "icon": "src/assets/icon.ico"
+      }
+    },
     "scripts": {
         "build": "vite build",
         "lint": "eslint",
