Remove large files and folders from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ src/assets/directory.json
 src/assets/recently-viewed.json
 src/assets/starred.json
 src/assets/user-settings.json
+dist/
+build/
+venv/
