--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "bootstrap": "^5.3.7",
+        "js-yaml": "^4.1.1",
         "lucide-react": "^0.511.0",
         "path-browserify": "^1.0.1",
         "react": "^18.3.1",
