--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.26.2",
+        "tailwind": "^4.0.0",
         "wallpaper": "^7.2.1"
     },
     "devDependencies": {
